--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,66 +1,81 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Café Aurora | Contacto</title>
-  <meta name="description" content="Escríbenos para prensa, alianzas o consultas generales.">
-  <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
-  <!-- Header -->
-  <header class="site-header">
-    <nav class="site-nav">
-      <a class="brand" href="../index.html">Café Aurora</a>
-      <ul class="nav-list">
-        <li><a href="menu.html">Menú</a></li>
-        <li><a href="sedes.html">Sedes</a></li>
-        <li><a href="reservas.html">Reservas</a></li>
-        <li><a href="sobre.html">Sobre</a></li>
-        <li><a aria-current="page" href="contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Café Aurora | Contacto</title>
+    <meta
+      name="description"
+      content="Escríbenos para prensa, alianzas o consultas generales."
+    />
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
+  <body>
+    <!-- Header -->
+    <header class="site-header">
+      <nav class="site-nav">
+        <a class="brand" href="../index.html">Café Aurora</a>
 
-  <main id="contenido">
-    <!-- Título -->
-    <section class="encabezado-pagina">
-      <h1>Contacto</h1>
-      <p>Responderemos dentro de 24–48h hábiles.</p>
-    </section>
+        <input
+          id="nav-toggle"
+          class="nav-toggle"
+          type="checkbox"
+          aria-label="Abrir menú"
+        />
+        <label for="nav-toggle" class="burger" aria-label="Abrir menú">
+          <span class="lines" aria-hidden="true"></span>
+        </label>
 
-    <!-- Formulario -->
-    <section class="form-contacto">
-      <form action="#" method="post">
-        <label for="asunto">Asunto</label>
-        <input id="asunto" name="asunto" type="text" required>
+        <ul class="nav-list">
+          <li><a href="menu.html">Menú</a></li>
+          <li><a href="sedes.html">Sedes</a></li>
+          <li><a href="reservas.html">Reservas</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
 
-        <label for="correo">Correo</label>
-        <input id="correo" name="correo" type="email" required>
+    <main id="contenido">
+      <!-- Título -->
+      <section class="encabezado-pagina">
+        <h1>Contacto</h1>
+        <p>Responderemos dentro de 24–48h hábiles.</p>
+      </section>
 
-        <label for="mensaje">Mensaje</label>
-        <textarea id="mensaje" name="mensaje" rows="6" required></textarea>
+      <!-- Formulario -->
+      <section class="form-contacto">
+        <form action="#" method="post">
+          <label for="asunto">Asunto</label>
+          <input id="asunto" name="asunto" type="text" required />
 
-        <button type="submit">Enviar</button>
-      </form>
-    </section>
+          <label for="correo">Correo</label>
+          <input id="correo" name="correo" type="email" required />
 
-    <!-- Datos -->
-    <section class="datos-contacto">
-      <h2>Datos</h2>
-      <address>
-        Av. Principal 123, Lima · <a href="mailto:hola@cafearora.pe">hola@cafearora.pe</a>
-      </address>
-      <figure class="mapa-contacto">
-        <img src="../assets/wire/map-16x9.png" alt="Wireframe mapa 16:9">
-        <figcaption>Referencia de ubicación</figcaption>
-      </figure>
-    </section>
-  </main>
+          <label for="mensaje">Mensaje</label>
+          <textarea id="mensaje" name="mensaje" rows="6" required></textarea>
 
-  <!-- Footer -->
-  <footer class="site-footer">
-    <p>&copy; 2025 Café Aurora</p>
-  </footer>
-</body>
+          <button type="submit">Enviar</button>
+        </form>
+      </section>
+
+      <!-- Datos -->
+      <section class="datos-contacto">
+        <h3>Datos</h3>
+        <address>
+          Av. Principal 123, Lima ·
+          <a href="mailto:hola@cafearora.pe">hola@cafearora.pe</a>
+        </address>
+        <figure class="mapa-contacto">
+          <img src="../assets/wire/map-16x9.png" alt="Wireframe mapa 16:9" />
+          <figcaption>Referencia de ubicación</figcaption>
+        </figure>
+      </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+      <p>&copy; 2025 Café Aurora</p>
+    </footer>
+  </body>
 </html>
