--- a/pages/sedes.html
+++ b/pages/sedes.html
@@ -1,70 +1,90 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Café Aurora | Sedes</title>
-  <meta name="description" content="Direcciones, horarios y mapas de nuestras sedes.">
-  <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
-  <!-- Header -->
-  <header class="site-header">
-    <nav class="site-nav">
-      <a class="brand" href="../index.html">Café Aurora</a>
-      <ul class="nav-list">
-        <li><a href="menu.html">Menú</a></li>
-        <li><a aria-current="page" href="sedes.html">Sedes</a></li>
-        <li><a href="reservas.html">Reservas</a></li>
-        <li><a href="sobre.html">Sobre</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Café Aurora | Sedes</title>
+    <meta
+      name="description"
+      content="Direcciones, horarios y mapas de nuestras sedes."
+    />
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
+  <body>
+    <!-- Header -->
+    <header class="site-header">
+      <nav class="site-nav">
+        <a class="brand" href="../index.html">Café Aurora</a>
 
-  <main id="contenido">
-    <!-- Título -->
-    <section class="encabezado-pagina">
-      <h1>Nuestras sedes</h1>
-      <p>Elige la más cercana y revisa horarios.</p>
-    </section>
+        <input
+          id="nav-toggle"
+          class="nav-toggle"
+          type="checkbox"
+          aria-label="Abrir menú"
+        />
+        <label for="nav-toggle" class="burger" aria-label="Abrir menú">
+          <span class="lines" aria-hidden="true"></span>
+        </label>
 
-    <!-- Lista de sedes -->
-    <section class="lista-sedes">
-      <article class="sede">
-        <div class="sede-info">
-          <h2>Miraflores</h2>
-          <p>Av. Principal 123, Miraflores</p>
-          <p>Lun–Dom: 7:00–21:00</p>
-        </div>
-        <figure class="sede-mapa">
-          <img src="../assets/wire/map-4x3.png" alt="Wireframe mapa de Miraflores">
-          <figcaption>Referencia de ubicación</figcaption>
-        </figure>
-      </article>
+        <ul class="nav-list">
+          <li><a href="menu.html">Menú</a></li>
+          <li><a href="sedes.html">Sedes</a></li>
+          <li><a href="reservas.html">Reservas</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <article class="sede">
-        <div class="sede-info">
-          <h2>Barranco</h2>
-          <p>Calle Cultural 456, Barranco</p>
-          <p>Lun–Dom: 8:00–22:00</p>
-        </div>
-        <figure class="sede-mapa">
-          <img src="../assets/wire/map-4x3.png" alt="Wireframe mapa de Barranco">
-          <figcaption>Referencia de ubicación</figcaption>
-        </figure>
-      </article>
-    </section>
+    <main id="contenido">
+      <!-- Título -->
+      <section class="encabezado-pagina">
+        <h1>Nuestras sedes</h1>
+        <p>Elige la más cercana y revisa horarios.</p>
+      </section>
 
-    <!-- Nota -->
-    <section class="nota">
-      <p>Estacionamiento limitado. Pregunta por espacios pet-friendly.</p>
-    </section>
-  </main>
+      <!-- Lista de sedes -->
+      <section class="lista-sedes">
+        <article class="sede">
+          <div class="sede-info">
+            <h4>Miraflores</h4>
+            <p>Av. Principal 123, Miraflores</p>
+            <p>Lun–Dom: 7:00–21:00</p>
+          </div>
+          <figure class="sede-mapa">
+            <img
+              src="../assets/wire/map-4x3.png"
+              alt="Wireframe mapa de Miraflores"
+            />
+            <figcaption>Referencia de ubicación</figcaption>
+          </figure>
+        </article>
 
-  <!-- Footer -->
-  <footer class="site-footer">
-    <p>&copy; 2025 Café Aurora</p>
-  </footer>
-</body>
+        <article class="sede">
+          <div class="sede-info">
+            <h4>Barranco</h4>
+            <p>Calle Cultural 456, Barranco</p>
+            <p>Lun–Dom: 8:00–22:00</p>
+          </div>
+          <figure class="sede-mapa">
+            <img
+              src="../assets/wire/map-4x3.png"
+              alt="Wireframe mapa de Barranco"
+            />
+            <figcaption>Referencia de ubicación</figcaption>
+          </figure>
+        </article>
+      </section>
+
+      <!-- Nota -->
+      <section class="nota">
+        <p>Estacionamiento limitado. Pregunta por espacios pet-friendly.</p>
+      </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+      <p>&copy; 2025 Café Aurora</p>
+    </footer>
+  </body>
 </html>
