--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,7 +31,7 @@
           <li><a href="sedes.html">Sedes</a></li>
           <li><a href="reservas.html">Reservas</a></li>
           <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="contacto.html" aria-current="page">Contacto</a></li>
         </ul>
       </nav>
     </header>
