--- a/pages/sedes.html
+++ b/pages/sedes.html
@@ -28,7 +28,7 @@
 
         <ul class="nav-list">
           <li><a href="menu.html">Menú</a></li>
-          <li><a href="sedes.html">Sedes</a></li>
+          <li><a href="sedes.html" aria-current="page">Sedes</a></li>
           <li><a href="reservas.html">Reservas</a></li>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="contacto.html">Contacto</a></li>
