--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -30,7 +30,7 @@
           <li><a href="menu.html">Menú</a></li>
           <li><a href="sedes.html">Sedes</a></li>
           <li><a href="reservas.html">Reservas</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="sobre.html" aria-current="page">Sobre</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
