--- a/pages/menu.html
+++ b/pages/menu.html
@@ -28,7 +28,7 @@
         </label>
 
         <ul class="nav-list">
-          <li><a href="menu.html">Menú</a></li>
+          <li><a href="menu.html" aria-current="page">Menú</a></li>
           <li><a href="sedes.html">Sedes</a></li>
           <li><a href="reservas.html">Reservas</a></li>
           <li><a href="sobre.html">Sobre</a></li>
