--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -26,7 +26,7 @@
         <ul class="nav-list">
           <li><a href="menu.html">Menú</a></li>
           <li><a href="sedes.html">Sedes</a></li>
-          <li><a href="reservas.html">Reservas</a></li>
+          <li><a href="reservas.html" aria-current="page">Reservas</a></li>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
