--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
       name="description"
       content="Café de especialidad, pastelería artesanal y un espacio para disfrutar."
     />
+    <meta name="robots" content="index,follow" />
+    <meta property="og:title" content="Café Aurora — Café artesanal en Lima" />
+    <meta
+      property="og:description"
+      content="Menú de temporada, reservas fáciles y dos sedes con ambiente cálido."
+    />
+    <meta property="og:image" content="./assets/miniaturas/download.jpg" />
+    <meta
+      property="og:image:alt"
+      content="Barista sirviendo espresso en la barra de Café Aurora"
+    />
+    <meta name="twitter:title" content="Café Aurora — Café artesanal en Lima" />
+    <meta
+      name="twitter:description"
+      content="Menú de temporada, reservas fáciles y dos sedes con ambiente cálido."
+    />
+    <meta name="twitter:image" content="./assets/miniaturas/download.jpg" />
+    <link rel="icon" href="./assets/icons/icon.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
