--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,8 +6,26 @@
     <title>Café Aurora | Contacto</title>
     <meta
       name="description"
-      content="Escríbenos para prensa, alianzas o consultas generales."
+      content="Escríbenos para consultas o eventos."
     />
+    <meta name="robots" content="index,follow" />
+    <meta property="og:title" content="Contacto — Café Aurora" />
+    <meta
+      property="og:description"
+      content="Escríbenos para consultas, eventos o feedback. Respondemos en 24–48 h."
+    />
+    <meta property="og:image" content="../assets/miniaturas/download.jpg" />
+    <meta
+      property="og:image:alt"
+      content="Barista sirviendo espresso en la barra de Café Aurora"
+    />
+    <meta name="twitter:title" content="Contacto — Café Aurora" />
+    <meta
+      name="twitter:description"
+      content="Escríbenos para consultas o eventos."
+    />
+    <meta name="twitter:image" content="../assets/miniaturas/download.jpg" />
+    <link rel="icon" href="../assets/icons/icon.png" />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
