--- a/pages/menu.html
+++ b/pages/menu.html
@@ -8,6 +8,24 @@
       name="description"
       content="Carta de cafés, filtrados, bebidas y pastelería."
     />
+    <meta name="robots" content="index,follow" />
+    <meta property="og:title" content="Menú — Café Aurora" />
+    <meta
+      property="og:description"
+      content="Cafés de especialidad, postres caseros y opciones saladas. Precios y descripciones."
+    />
+    <meta property="og:image" content="../assets/miniaturas/download.jpg" />
+    <meta
+      property="og:image:alt"
+      content="Barista sirviendo espresso en la barra de Café Aurora"
+    />
+    <meta name="twitter:title" content="Menú — Café Aurora" />
+    <meta
+      name="twitter:description"
+      content="Cafés de especialidad, postres caseros y opciones saladas."
+    />
+    <meta name="twitter:image" content="../assets/miniaturas/download.jpg" />
+    <link rel="icon" href="../assets/icons/icon.png" />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
 
