--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -8,6 +8,24 @@
       name="description"
       content="Nuestra historia, tostadores aliados y filosofía de servicio."
     />
+    <meta name="robots" content="index,follow" />
+    <meta property="og:title" content="Sobre nosotros — Café Aurora" />
+    <meta
+      property="og:description"
+      content="Nuestra historia, valores y el equipo detrás de cada taza."
+    />
+    <meta property="og:image" content="../assets/miniaturas/download.jpg" />
+    <meta
+      property="og:image:alt"
+      content="Barista sirviendo espresso en la barra de Café Aurora"
+    />
+    <meta name="twitter:title" content="Sobre nosotros — Café Aurora" />
+    <meta
+      name="twitter:description"
+      content="Nuestra historia y el equipo."
+    />
+    <meta name="twitter:image" content="../assets/miniaturas/download.jpg" />
+    <link rel="icon" href="../assets/icons/icon.png" />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
